Added user pictures

--- a/ticket-angular-app/src/assets/json/app.json
+++ b/ticket-angular-app/src/assets/json/app.json
@@ -19,7 +19,7 @@
                 "password": "phish1"
             },
             "phone": "+1 (953) 464-2288",
-            "picture": "http://placehold.it/32x32",
+            "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg",
             "numberOfBookings": 10
         },
         "customer": {
@@ -27,8 +27,8 @@
             "ticketID": "5465321123@!#41435",
             "name": {
                 "title": "Mr",
-                "first": "Jayden",
-                "last": "Brown"
+                "first": "Tom",
+                "last": "Cruise"
                 },
             "location": {
                 "street": {
@@ -71,7 +71,7 @@
                     "approvalStatus": "In Progress"
                 }
             ],
-            "picture": "http://placehold.it/32x32",
+            "picture": "https://randomuser.me/api/portraits/thumb/men/91.jpg",
             "registered": "2015-01-28T01:19:23 -02:00"
         }  
     },
@@ -81,8 +81,8 @@
         "ticketID": "5465321123@!#41435", 
         "name": {
             "title": "Mr",
-            "first": "Jayden",
-            "last": "Brown"
+            "first": "Tom",
+            "last": "Cruise"
             },
         "location": {
             "street": {
@@ -125,7 +125,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/90.jpg"
         
       },
       {
@@ -177,7 +177,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 3,
@@ -228,7 +228,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 4, 
@@ -279,7 +279,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 5, 
@@ -330,7 +330,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 6, 
@@ -381,7 +381,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 7, 
@@ -432,7 +432,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 8, 
@@ -483,7 +483,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 9, 
@@ -534,7 +534,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       },
       {
         "id": 10, 
@@ -585,7 +585,7 @@
                 "approvalStatus": "In Progress"
             }
         ],
-        "picture": "http://placehold.it/32x32"
+        "picture": "https://randomuser.me/api/portraits/thumb/men/75.jpg"
       }
     ]
 }
