--- a/ticket-angular-app/package.json
+++ b/ticket-angular-app/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.8",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~11.2.8",
     "@angular/compiler": "~11.2.8",
     "@angular/core": "~11.2.8",
@@ -22,6 +23,7 @@
     "@fullcalendar/angular": "^5.6.0",
     "@fullcalendar/daygrid": "^5.6.0",
     "@fullcalendar/interaction": "^5.6.0",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.2",
     "rxjs": "~6.6.0",
