Changed calendar component, made the whole app responsive on desktop res, added couple of extra things to appointment page

--- a/ticket-angular-app/src/assets/json/user-settings.json
+++ b/ticket-angular-app/src/assets/json/user-settings.json
@@ -22,23 +22,26 @@
                 }
             ],
             "timezone": "GMT+3",
-            "duration": "00:30",
             "services": [
                 {
                     "id": 1,
-                    "name": "Haircut & Blowdry"
+                    "name": "Haircut & Blowdry",
+                    "duration": "00:30"
                 },
                 {
                     "id": 2,
-                    "name": "Express Cut"
+                    "name": "Express Cut",
+                    "duration": "00:30"
                 },
                 {
                     "id": 3,
-                    "name": "Clipper Cut"
+                    "name": "Clipper Cut",
+                    "duration": "00:30"
                 },
                 {
                     "id": 4,
-                    "name": "Haircut & Wash"
+                    "name": "Haircut & Wash",
+                    "duration": "00:30"
                 }
             ]
         },
