--- a/ticket-angular-app/angular.json
+++ b/ticket-angular-app/angular.json
@@ -24,10 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/primeng/resources/themes/vela-orange/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "./node_modules/primeflex/primeflex.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -91,6 +88,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
